--- a/app/src/main/res/layout/activity_main_wall.xml
+++ b/app/src/main/res/layout/activity_main_wall.xml
@@ -9,16 +9,26 @@
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar" />
 
-    <include layout="@layout/tab_activity_main_wall"
-        android:id="@+id/tab"
+    <com.hanks.htextview.HTextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_below="@id/toolbar"/>
+        android:text="@string/app_name"
+        android:layout_centerInParent="true"
+        android:textColor="#FFFFFF"
+        android:id="@+id/view" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tab" />
+
+
+    <!--<include layout="@layout/tab_activity_main_wall"-->
+        <!--android:id="@+id/tab"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_below="@id/toolbar"/>-->
+
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/viewpager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:visibility="invisible" />-->
 
 </RelativeLayout>
