--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,7 @@
         <item name="android:textColor">@color/textColorSecondary</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="episodieTextStyle">
+        <item name="android:textColor">@color/textColorPrimary</item>
+    </style>
 </resources>
