--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,13 @@
         android:transitionName="background" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login_button"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
-        android:onClick="clikc"
         android:text="Login" />
 
     <EditText
