--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/login_layout">
 
     <ImageView
         android:id="@+id/iv_login_background"
@@ -10,6 +11,12 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:transitionName="background" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/iv_shared_background"
+        android:scaleType="centerCrop" />
 
     <Button
         android:id="@+id/login_button"
