Prototype of background

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/sign_up_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_shared_background"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/iv_signup_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/iv_signup_background"
         android:scaleType="centerCrop"
-        android:transitionName="background"/>
+        android:transitionName="background"
+        android:visibility="gone" />
 
     <Button
+        android:id="@+id/bt_sign_up"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign up!"
-        android:id="@+id/bt_sign_up"
-        android:layout_gravity="center_vertical"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_vertical"
+        android:text="Sign up!" />
 </RelativeLayout>
