--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="status_bar_padding">24dp</dimen>
     <dimen name="layout_paddding">16dp</dimen>
     <dimen name="toolbar_title_padding">72dp</dimen>
+    <dimen name="iv_next_padding_right">24dp</dimen>
 
     <integer name="anim_duration_very_long">1500</integer>
     <integer name="anim_duration_long">500</integer>
