--- a/application/src/main/res/layout/item_loading.xml
+++ b/application/src/main/res/layout/item_loading.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/padding_bottom_item"
-    android:paddingTop="@dimen/padding_top_item">
+    android:paddingBottom="@dimen/padding_bottom_item_all"
+    android:paddingTop="@dimen/padding_top_item_all">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animation_view_item_loading"
-        android:layout_width="@dimen/width_animation_view_item_loading"
-        android:layout_height="@dimen/height_animation_view_item_loading"
+        android:layout_width="@dimen/width_item_loading_animation_view"
+        android:layout_height="@dimen/height_item_loading_animation_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/text_view_item_loading_message"
+        android:text="@string/item_loading_message"
         android:layout_marginTop="@dimen/margin_default"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
