--- a/application/src/main/res/values-v21/dimens.xml
+++ b/application/src/main/res/values-v21/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="status_bar_padding">24dp</dimen>
-    <dimen name="navigation_bottom_view_height">58dp</dimen>
+
+    <dimen name="fab_button_elevation">8dp</dimen>
+    <dimen name="fab_button_pressed_translation_z">12dp</dimen>
+
 </resources>
