--- a/application/src/main/res/values/colors.xml
+++ b/application/src/main/res/values/colors.xml
@@ -3,12 +3,16 @@
     <color name="primary">#ff333333</color>
     <color name="primary_dark">#292929</color>
     <color name="primary_light">#6d6d6d</color>
-    <color name="accent">#0079ea</color>
+    <color name="accent">@color/primary_dark</color>
 
     <color name="background_dark">#ff333333</color>
     <color name="text_primary">#FFFFFF</color>
     <color name="text_secondary">#0079ea</color>
 
+    <color name="status_bar_color">#30000000</color>
+    <color name="navigation_bar_color">#20000000</color>
+
     <color name="filter_green">#3eab25</color>
     <color name="indicator_page_alpha">#40FFFFFF</color>
+    <color name="gradient">#70000000</color>
 </resources>
