--- a/application/src/main/res/drawable/drawer_ic_stats.xml
+++ b/application/src/main/res/drawable/drawer_ic_stats.xml
@@ -5,6 +5,6 @@
         android:viewportHeight="24"
         android:viewportWidth="24">
     <path
-        android:fillColor="#000"
+        android:fillColor="#FFF"
         android:pathData="M22,21H2V3H4V19H6V10H10V19H12V6H16V19H18V14H22V21Z"/>
 </vector>
