--- a/application/src/main/res/layout/fragment_top_list.xml
+++ b/application/src/main/res/layout/fragment_top_list.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:padding="@dimen/padding_big"
+                app:arrow_color="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="@id/image_view_top_list_share"
                 app:layout_constraintTop_toTopOf="@id/image_view_top_list_share" />
 
